sample/misc/error/wip/gen_shift-2.bfr
codegen [
  $build {
    a: array(2) { i: index }
  } in
  > a@i (-2)
]